--- a/index.html
+++ b/index.html
@@ -25,11 +25,10 @@
   </style>
 </head>
 <body>
-  <div align="center">
-    <h1>Congratulations!</h1>
-    <h2>You have successfully created a pipeline that retrieved this source application from an Amazon S3 bucket and deployed it 
-	to three Amazon EC2 instances using AWS CodeDeploy.</h2>
-    <p>For next steps, read the AWS CodePipeline Documentation.</p>
+  <div align="right">
+    <h1>I finally figured it out! Woo!</h1>
+    <h2>Group Won is the best.</h2>
+    <p>A+? :)</p>
   </div>
 </body>
 </html>
