--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 </head>
 <body>
   <div align="right">
-    <h1>I finally figured it out! Woo!</h1>
+    <h1>I finally figured it out! Woo! Maybe?</h1>
     <h2>Group Won is the best.</h2>
     <p>A+? :)</p>
   </div>
