--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
   <title>Sample Deployment</title>
   <style>
     body {
-      color: #ffffff;
-      background-color: #007f3f;
+      color: #666666;
+      background-color: #ee82ee;
       font-family: Arial, sans-serif;
       font-size: 14px;
     }
