--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
   </style>
 </head>
 <body>
-  <div align="right">
+  <div align="left">
     <h1>I finally figured it out! Woo! Maybe?</h1>
     <h2>Group Won is the best.</h2>
+    <h3>THIS IS BERRY FUN :).</h3>
+    
     <p>A+? :)</p>
   </div>
 </body>
